# mops-submission

./: README.md
mops-data/: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
mops-data/demos/: run_sim_cam_obs_figs.py  vis_rgb.py
mops-data/scripts/: convert_hdf5_to_webdataset.py  convert_webdataset_to_parquet.py  generate_clutter.py  generate_kitchen.py  generate_single_object.py  verify_hdf5.py
mops-data/src/mops_data/: __init__.py
mops-data/src/mops_data/agents/: __init__.py  panda_longhand.py
mops-data/src/mops_data/asset_manager/: anno_handler.py  object_annotation_registry.py  partnet_mobility_loader.py  uniform_sampler.py
mops-data/src/mops_data/envs/: __init__.py  afford_env.py  render_env.py  robocasa_afford_env.py
mops-data/src/mops_data/generation/: base_config.py  base_pipeline.py  dataset_writer.py  hdf_writer.py  parquet_writer.py  subprocess_renderer.py  variation_utils.py  webdataset_writer.py
mops-data/src/mops_data/render/: afford_obs_augmentor.py  shader_config.py
mops-data/src/mops_data/resources/: class_affordances.json  panda_v3.urdf  robocasa_affordances.json
mops-il/: .gitignore  GETTING_STARTED.md  README.md  pyproject.toml
mops-il/src/lerobot/: __init__.py  __version__.py
mops-il/src/lerobot/async_inference/: configs.py  constants.py  helpers.py  policy_server.py  robot_client.py
mops-il/src/lerobot/configs/: eval.py  parser.py  policies.py  train.py
mops-il/src/lerobot/datasets/: aggregate.py  backward_compatibility.py  compute_stats.py  dataset_tools.py  factory.py  image_writer.py  lerobot_dataset.py  online_buffer.py  pipeline_features.py  sampler.py  streaming_dataset.py  transforms.py  utils.py  video_utils.py
mops-il/src/lerobot/model/: kinematics.py
mops-il/src/lerobot/optim/: optimizers.py
mops-il/src/lerobot/policies/: factory.py  pretrained.py  utils.py
mops-il/src/lerobot/processor/: __init__.py  batch_processor.py  converters.py  delta_action_processor.py  device_processor.py  env_processor.py  factory.py  gym_action_processor.py  hil_processor.py  joint_observations_processor.py  migrate_policy_normalization.py  normalize_processor.py  observation_processor.py  pipeline.py  (+2 more)
mops-il/src/mops_il/: __init__.py  train.py
mops-il/src/mopscasa/: __init__.py  annotation_handler.py  env_utils.py  observation_extender.py
mops-il/src/robocasa/: README.md  __init__.py  macros.py
mops-il/src/robosuite/: README.md  __init__.py  macros.py
mops-pred/: .gitignore  CLAUDE.md  README.md  pyproject.toml
mops-pred/configs/: deeplabv3_affordance_clutter.yaml  deeplabv3_affordance_kitchen.yaml  deeplabv3_affordance_kitchen_5k.yaml  deeplabv3_semantic.yaml  dinov3_affordance_clutter.yaml  dinov3_affordance_kitchen.yaml  dinov3_affordance_kitchen_5k.yaml  resnet50_clf.yaml  segformer_affordance_clutter.yaml  segformer_affordance_kitchen.yaml  segformer_affordance_kitchen_5k.yaml  vit_clf.yaml
mops-pred/mops_pred/: config.py  test_clip.py  test_dino_segmentation.py  train_and_test_clip.py  training.py
mops-pred/mops_pred/datasets/: __init__.py  base_h5.py  clutter.py  dataset_factory.py  object_centric.py  parquet_dataset.py  webdataset.py
mops-pred/mops_pred/models/: __init__.py  dinov2_segmentation.py  dinov3_segmentation.py  model_factory.py  object_classifier.py  segm_transformer.py  segmentation.py
(+515 files in other folders)
